// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comp3 should match snapshot 1`] = `
<div>
  <span>
    
    Now you see me
  
  </span>
</div>
`;

exports[`comp3 should match snapshot 2`] = `
<div>
  <!---->
</div>
`;
